--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -3,11 +3,26 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Git Essentials</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <!--
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
+  -->
   </head>
   <body>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+
+      <header>
+        <h1>Version Control System</h1>
+        <p>Version control, also known as source control, is the practice of tracking and managing changes to software code.<br>
+          Version control systems (VCS ) are software tools that help software teams manage changes to source code over time.<br>
+        VCS tools have seen great improvements over the past few decades and some are better than others.
+          One of the most popular VCS tools in use today is called <strong><em>Git</em></strong>.
+        </p>
+      </header>
+    
 </body>
 </html
