--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -14,26 +14,26 @@
 
     <main>
         <article class="featured-article">
-            <img src="placeholder1.jpg" alt="Featured Article Thumbnail">
+            <img src="https://opengraph.githubassets.com/54e88015aede341b97e213acf5a29a153bda795a40c2b68adbed4534190a296d/gatewayapps/kamino" alt="Kamino GitHub Repository">
             <div class="article-content">
-                <h2>Featured Article Title</h2>
-                <p>Summary of the featured article. This is where you'd put a brief description of the article's content.</p>
+                <h2>Managing GitHub Issues: A Kamino Breakdown & Workaround</h2>
+                <p>The Kamino Chrome extension is a handy tool that allows developers to easily clone GitHub issues between repositories, simplifying project management. Unfortunately, the extension has recently stopped functioning, leaving many users in a bind. A practical workaround is to utilize GitHub Actions for automating issue transfers. This solution provides flexibility and lets you keep the workflow smooth while Kamino is under maintenance.</p>
                 <button class="read-more">Read More</button>
             </div>
         </article>
 
         <div class="secondary-articles">
             <article>
-                <img src="placeholder2.jpg" alt="Article 2 Thumbnail">
-                <h2>Second Article Title</h2>
-                <p>Summary of the second article. This is where you'd put a brief description of the article's content.</p>
+                <img src="https://media.istockphoto.com/id/1621256094/photo/businesswomen-talking-and-using-laptop-during-a-meeting-at-auditorium.jpg?s=1024x1024&w=is&k=20&c=QVtY2DxEzBp08RFY7ykC_SHw1VuFxKyicTn5y9Tn8Xo=" alt="Article 2 Thumbnail">
+                <h2>The Power of Tech Communities: Why You Should Join One</h2>
+                <p>Being part of a tech community is invaluable for anyone starting their coding journey. Communities provide a space to ask questions, share experiences, and learn from peers or seasoned professionals. Whether through online forums or local meetups, the connections you make can offer both emotional support and practical advice. Plus, it's a great way to stay updated on trends, tools, and best practices in a constantly evolving industry.</p>
                 <button class="read-more">Read More</button>
             </article>
 
             <article>
-                <img src="placeholder3.jpg" alt="Article 3 Thumbnail">
-                <h2>Third Article Title</h2>
-                <p>Summary of the third article. This is where you'd put a brief description of the article's content.</p>
+                <img src="https://media.istockphoto.com/id/1952800161/photo/wooden-man-putting-on-mask-with-smile-and-sadness-concept-of-bipolar-disorder.jpg?s=1024x1024&w=is&k=20&c=VIFMJX4jInvG6U81Dg2kcB-0DTzGKW1_8Y_uCaH-ZtA=" alt="Article 3 Thumbnail">
+                <h2>Overcoming Imposter Syndrome as a New Developer</h2>
+                <p>Many developers, especially beginners, experience imposter syndrome—the feeling of not being “good enough” despite clear progress. To overcome this, focus on celebrating small achievements and continuously improving your skills. Seek feedback, join supportive communities, and remember that even seasoned developers face this struggle. Your journey is unique, and growth takes time. Stay positive and keep pushing forward.</p>
                 <button class="read-more">Read More</button>
             </article>
         </div>
