--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -29,7 +29,9 @@
           Subversion, CVS, Perforce, and ClearCase with features like cheap
           local branching, convenient staging areas, and multiple workflows.
         </p>
-        <button><a href="https://git-scm.com/" target="_blank">READ MORE</a></button>
+        <button>
+          <a href="https://git-scm.com/" target="_blank">READ MORE</a>
+        </button>
       </section>
 
       <div class="section-container">
@@ -42,8 +44,13 @@
             centralized version control system. It even makes better use of
             junior developers by giving them a safe environment to work in.
           </p>
-          <button><a href="https://www.atlassian.com/git/tutorials/why-git" target="_blank">
-            READ MORE</a>
+          <button>
+            <a
+              href="https://www.atlassian.com/git/tutorials/why-git"
+              target="_blank"
+            >
+              READ MORE</a
+            >
           </button>
         </section>
         <section class="article">
@@ -54,11 +61,18 @@
             how big or how small—you spawn a new branch to encapsulate your
             changes.
           </p>
-          <button><a href="https://www.w3schools.com/git/git_branch.asp?remote=github" target="_blank">READ MORE</a>
-          
+          <button>
+            <a
+              href="https://www.w3schools.com/git/git_branch.asp?remote=github"
+              target="_blank"
+              >READ MORE</a
+            >
           </button>
         </section>
       </div>
     </main>
+    <footer class="footer">
+      <p class="footer-text">Designed By Luke (c)2024</p>
+    </footer>
   </body>
 </html>
