Removed border guides

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -15,7 +15,7 @@
         <h1>Welcome to Git</h1>
         <p>
           A distributed version control system, where every developer gets their
-          local repository with full commit history
+          local repository with full commit history.
         </p>
       </header>
 
