Html,css created

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,10 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Wireframe/css/style.css">
   </head>
-  <body>
-    <!-- Add your HTML markup here -->
+  <body id="body">
+  <div id="header">
+    <header>
+      <h1>Git</h1>
+      <p>What is Git and how it helps developers</p>
+    </header>
+  </div>
+    
+  <main id="main">
+    <div id="firstArticle">
+      <article> 
+        <h2>What is Git?</h2>
+        <p>Git is a distributed version control system used to track changes in source code during software development.</p>
+      </article>
+    </div>
+    <div id="secondFirstArticle">
+      <article class="column">
+        <h2>Why do developers need Git?</h2>
+        <p>Developers need Git for several reasons:</p>
+        <ul>
+          <li>Collaboration</li>
+          <li>Backup</li>
+          <li>Code Management</li>
+          <li>Accountability</li>
+        </ul>
+        <p>Its ability to handle multiple versions of a project and resolve conflicts makes it indispensable for modern software development, especially when working in teams.</p>
+      </article>
+      <article class="column">
+        <h2>What is a branch in Git?</h2>
+        <p>In GitHub, a branch is an independent line of development within a repository. Branches allow developers to work on features, bug fixes, or experiments in isolation from the main codebase (often called the "main" or "master" branch). This means you can make changes without affecting the stable version of your project.</p>
+      </article>
+
+    </div>
+   </main>
+   <div id="footer">
+    Design by : Shahrokh 
+    more info please contact: info@info.com
+  </div>
+
+
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
 </html
