--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- Add your HTML markup here -->
+    <header>
+      <h1>GitHub For Software Developers</h1>
+      <p>Understanding Git and its importance in the software development process.</p>
+    </header>
+  </body>
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
-</html
+</html>
