Setting up Articles 2 and 3
Setting up the containers for  Articles 2 and 3

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -28,15 +28,39 @@
   <main>
     <article>
       <div id="article-one-title">
-        <img src="./Images/Gitlogo.png" alt="Git logo">
+        <img src="./Images/Gitlogo.png" alt="Git logo" id="git-logo">
         <h2 id="article-one-h2-margin">What is Git?</h2>
       </div>
       <p>
         Git is a version control software that allows developers to create and manage different versions of a project. It is a free and open source distributed version control system designed to handle everything from small to very large projects with speed and efficiency.
       </p>
       <a href="https://www.atlassian.com/git/tutorials/what-is-git" target="_blank"><button class="btn-format">Read More</button></a>
-
     </article>
+
+    <div id="other-article-title">
+      <article>
+        <h2>Why do developers need Git?</h2>
+        <p>
+          Developers
+        </p>
+        <a href="https://www.atlassian.com/git/tutorials/why-git" target="_blank"><button class="btn-format">Read More</button></a>
+      </article>
+  
+      <article id="article-three-h2-margin">
+        <h2>What is a branch in Git?</h2>
+        <p>
+          Branches
+        </p>
+        <a href="https://git-scm.com/book/en/v2/Git-Branching-Branches-in-a-Nutshell" target="_blank"><button class="btn-format">Read More</button></a>
+      </article>
+
+    </div>
+
+    
+
+    
+
+
   </main>
 
 </body>
