--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -11,6 +11,20 @@
       <h1>GitHub For Software Developers</h1>
       <p>Understanding Git and its importance in the software development process.</p>
     </header>
+    <main>
+      <section class=""articles">
+        <article>
+          <h2>What is Git?</h2>
+          <P>Git is a free, open-source version control system (VCS) that helps developers track and manage changes to their code and projects.</P>
+          <a href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F">Read More</a>   
+        </article>
+        <article>
+          <h2> Why Do Developers Need Git?</h2>
+          <p>Developers use Git because it's a version control system that helps them manage source code, collaborate with others, and track changes to their projects</p>
+          <a href="https://www.nobledesktop.com/learn/git/what-is-git"></a>Read More
+        </article>
+      </section>
+    </main>
   </body>
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
