adding wht developers need Git html page

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -21,7 +21,7 @@
         <article>
           <h2> Why Do Developers Need Git?</h2>
           <p>Developers use Git because it's a version control system that helps them manage source code, collaborate with others, and track changes to their projects</p>
-          <a href="https://www.nobledesktop.com/learn/git/what-is-git"></a>Read More
+          <a href="https://www.nobledesktop.com/learn/git/what-is-git">Read More</a>
         </article>
       </section>
     </main>
