--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -23,6 +23,11 @@
           <p>Developers use Git because it's a version control system that helps them manage source code, collaborate with others, and track changes to their projects</p>
           <a href="https://www.nobledesktop.com/learn/git/what-is-git">Read More</a>
         </article>
+        <article>
+          <h2>What is a branch in Git?</h2>
+          <p>Git branches are effectively a pointer to a snapshot of your changes.</p>
+          <a href="https://www.w3schools.com/GIT/git_branch.asp">Read More</a>
+        </article>
       </section>
     </main>
   </body>
