--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -30,6 +30,9 @@
         </article>
       </section>
     </main>
+    <footer>
+      <p>2024 CYF Git Learning Hub</p>
+    </footer>
   </body>
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
