HTML file, worked on the body

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -7,7 +7,40 @@
     <link rel="stylesheet" href="/styl.css">
   </head>
   <body>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
-</body>
+    <!-- My Changes started from this line! -->
+    <!-- Header Section -->
+    <header>
+        <h1>What is Git?</h1>
+        <p>Learn about Git, why developers use it, and what branches are.</p>
+    </header>
+
+    <!-- Articles Section -->
+    <section class="articles">
+        <article>
+            <h2>What is Git?</h2>
+            <p>Git is a distributed version control system that helps developers track changes in their code over time. It allows multiple developers to work on the same project without overwriting each other's work.</p>
+            <a href="#">Read more about Git</a>
+        </article>
+
+        <article>
+            <h2>Why do Developers Need Git?</h2>
+            <p>Git enables developers to collaborate on projects efficiently. It helps manage large codebases and track code history, ensuring all changes can be rolled back if needed.</p>
+            <a href="#">Learn why Git is essential</a>
+        </article>
+
+        <article>
+            <h2>What is a Branch in Git?</h2>
+            <p>A branch in Git is a pointer to a specific commit, allowing developers to create independent lines of development. This enables them to work on new features without affecting the main codebase.</p>
+            <a href="#">Understand branches</a>
+        </article>
+    </section>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2024 Git Learning Page
+          I hope you enjoyed it.
+        </p>
+    </footer>
+
+  </body>
 </html>
