--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -7,7 +7,22 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <header>
+    <h1> Introduction</h1>
+  </header>
+    <main>
+    <P> Hello, my name is Shohreh Bayat, and I am a trainee at CYF.</P>
+    <h2>Fun Facts about me</h2>
+    <ul>
+      <li> I am professional at chess</li>
+      <li> I come from Iran</li>
+      <li> I love coding</li>
+    </ul>
+  </main>
+  <footer>
+    © Code Your Future
+  </footer>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
-</html
+</html>
