--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="/styl.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <!-- My Changes started from this line! -->
