fulfilled first round requested changes

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -11,35 +11,37 @@
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 
     <header>
-      <h1>Git Made Easy</h1>
-      <h2>An explanation of the mysteries of Git.</h2>
+      <h1>Git: Explained</h1>
+      <h2>It's Git, init.</h2>
     </header>
 
-    <div class="main">
+    <main>
       <article class="hero">
-        <img>
+        <img src="Images/git-feature copy.png" class="custom-img" alt="git logo of a branch and three circles as negative space in white square, next to the word git also in white, all over orange and purple background">
         <h2>What is Git?</h2>
         <p>Git is the backbone of modern software development, a powerful version control system that helps developers track changes, collaborate, and maintain project history. Whether you're working solo or in a large team, Git keeps your code organized and recoverable. Want to know how it works and why it's so essential? Click to dive in!
         </p>
-        <a target="_blank" href="https://www.freecodecamp.org/news/what-is-git-and-how-to-use-it-c341b049ae61/"><button>READ MORE</button></a>
-       </article>
-    </div>
+        <a target="_blank" href="https://www.freecodecamp.org/news/what-is-git-and-how-to-use-it-c341b049ae61/" class="button-link">READ MORE</a>
+               </article>
+    </main>
 
     <div class="content">
       <article class="card">
-        <img>
+        <img src="Images/full-stack-web-dev copy.jpg" alt="multiple lines and layers of generic code in different colours on a monitor">
         <h2>Why do developers need Git?</h2>
         <p>In today's fast-paced development world, Git has become an indispensable tool for managing projects. From version control to collaboration, it enables teams to work efficiently without stepping on each other's toes. Curious about how Git makes coding smoother and safer for developers? Learn more here.
         </p>
-        <a target="_blank" href="https://www.atlassian.com/git/tutorials/why-git"><button>READ MORE</button></a>
+        <a target="_blank" href="https://www.atlassian.com/git/tutorials/why-git" class="button-link">READ MORE</a>
+
       </article>
 
       <article class="card">
-        <img>
+        <img src="Images/git-branch copy.jpg" alt="many white lines branching off from each other with many circles of varying colours at regular intervals">
         <h2>What is a branch in Git?</h2>
         <p>Branches in Git unlock the power of parallel development, allowing teams to test new features, fix bugs, and collaborate without affecting the main codebase. Want to understand how branching works and why it's crucial for developers? Read on to explore the details.
         </p>
-        <a target="_blank" href="https://www.atlassian.com/git/tutorials/using-branches"><button>READ MORE</button></a>
+        <a target="_blank" href="https://www.atlassian.com/git/tutorials/using-branches" class="button-link">READ MORE</a>
+
       </article>
     </div>
 
