skeleton page code

--- a/Cakes-Co/index.html
+++ b/Cakes-Co/index.html
@@ -23,9 +23,10 @@
             <a href="">Order</a>
             <a href="">Lessons</a>
             <a href="">About</a>
+            <a href="">Find</a>
           </nav>
         </aside>
-        <p class="motto-p">The best cakes in town delivered to your door</p>
+        <p class="motto-p">The best cakes in town delivered to your door, we also deliver cupcakes.</p>
       </div>
     </header>
     <!-- main -->
