--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -9,5 +9,6 @@
   <body>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
-</body>
+      <p> What is GIT? It is awesome tool for developers!</p>
+    </body>
 </html
