--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/style.css" />   
 </head>
   <body>
-    <header>
+    <div class="container">
+      <header>
       <h1>What is Git?</h1>
         <p>
           Git is a distributed version control system that allows developers to
@@ -24,5 +25,7 @@
           data loss.
         </p>
     </header>
+    </div>
+    
 </body>
 </html
