Skeleton page code

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,10 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <!-- Add your HTML markup here -->
+         <!-- Page Title and Description Section -->
+         <header>
+          <h1>Page Title</h1>
+          <p>And Short Description</p>
+        </header>
+    
+      <!-- Main Article Section -->
+      <main>
+        <div class="articles">
+            <!-- First Article -->
+            <article>
+                <h2>Article Title1</h2>
+                <p>Article Summary</p>
+                <a href="#">Read More</a>
+            </article>
+            <!-- Second Article -->
+            <article>
+              <h2>Article Title2</h2>
+              <p>Article Summary</p>
+              <a href="#">Read More</a>
+           </article>
+           <!-- Third Article -->
+           <article>
+            <h2>Article Title3</h2>
+            <p>Article Summary</p>
+            <a href="#">Read More</a>
+          </article>
+
+        </div>
+      </main>
+    
+      <!-- Footer Section -->
+      <footer>
+          <p>Footer text, contact links, and other information about the site overall.</p>
+      </footer>
+
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
 </html
