Fix image source for Git wallpaper in header section

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -24,6 +24,11 @@
           the repository, enhancing collaboration and minimizing the risk of
           data loss.
         </p>
+        <img
+        src="images/gitwalpaper.png"
+        alt="git wallpaper"
+        class="header-image"
+      />
         
     </header>
     </div>
