--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -31,6 +31,7 @@
         class="header-image"
       />
               
+      <article class="header-article"></article>
     </header>
     </div>
     
