Nest content div inside header article for structured layout

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -31,7 +31,10 @@
         class="header-image"
       />
               
-      <article class="header-article"></article>
+      <article class="header-article">
+        <div class="content">
+        </div>
+      </article>
     </header>
     </div>
     
