Add article content: title (h1), introductory paragraph, and read more button

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -33,6 +33,22 @@
               
       <article class="header-article">
         <div class="content">
+          <h1>How GitHub Transformed Software Development</h1>
+
+          <p>
+            This article explores the pivotal role GitHub has played in
+            revolutionizing software development practices. It discusses how
+            GitHub has facilitated seamless collaboration among developers by
+            providing a platform for version control, code sharing, and
+            project management. The article highlights key features such as
+            pull requests, issues...
+          </p>
+          <button>
+            <a
+              href="https://chatgpt.com/share/67041899-4ad4-8006-bcc9-e4dba4aa4ae5"
+              >Read more...</a
+            >
+          </button>
         </div>
       </article>
     </header>
