Add h2 title, paragraph, and read more button to Enhanced Collaboration article

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -55,6 +55,23 @@
      
     <main>
       <section class="main-article">
+        <article class="content">
+          <h2>Enhanced Collaboration</h2>
+          <p>
+            GitHub significantly improves collaboration among developers by
+            providing a centralized platform for code sharing and version
+            control. With features like pull requests, issues, and
+            discussions, teams can easily communicate about changes, review
+            code, and track progress on tasks. This collaborative environment
+            allows developers to work on projects simultaneously, regardless
+            of their physical locations, fostering teamwork and reducing the
+            likelihood of conflicts in the codebase. Additionally, GitHub’s
+            branching system enables multiple contributors to experiment with
+            new features or fixes without affecting the main code,
+            streamlining the development process.
+          </p>
+          <button><a href="#">Read more...</a></button>
+        </article>
       </section>
     </main>
 
