add main heading and introduction text to HTML

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -9,6 +9,7 @@
   <body>
   <!-- Add your HTML markup here -->
   <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
-
+    <h1>Git and GitHub Fundamentals</h1>
+    <p>Learn the basics of Git and GitHub to manage your projects effectively.</p>
   </body>
   </html>
