Add two articles: Robust Version Control and Access to Open Source Community with headings, paragraphs, and read more buttons

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -72,6 +72,40 @@
           </p>
           <button><a href="#">Read more...</a></button>
         </article>
+        <article class="content">
+          <h2>Robust Version Control</h2>
+          <p>
+            One of the primary benefits of GitHub is its powerful version
+            control capabilities, which allow developers to track changes made
+            to their code over time. Every modification is recorded as a
+            commit, providing a complete history of the project. This makes it
+            easy to revert to previous versions if needed, facilitating
+            debugging and recovery from errors. The ability to create branches
+            means developers can work on new features or fixes in isolation,
+            merging them back into the main codebase only when they’re ready.
+            This structured approach helps maintain code quality and stability
+            throughout the development lifecycle.
+          </p>
+          <button><a href="#">Read more...</a></button>
+        </article>
+
+        <article class="content">
+          <h2>Access to Open Source Community</h2>
+          <p>
+            GitHub is home to one of the largest open-source communities in
+            the world, providing developers with the opportunity to contribute
+            to a vast array of projects. This access allows users to learn
+            from existing code, collaborate with experienced developers, and
+            gain practical experience in real-world scenarios. By
+            participating in open-source projects, developers can enhance
+            their skills, showcase their work to potential employers, and
+            build a professional network. Furthermore, the collaborative
+            nature of open-source projects encourages knowledge sharing and
+            innovation, making it an invaluable resource for developers of all
+            levels.
+          </p>
+          <button><a href="#">Read more...</a></button>
+        </article>
       </section>
     </main>
 
