--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -111,6 +111,8 @@
     </div>
     <footer>
       <div class="container">
+        <div class="items">
+        </div>
       </div>
     </footer>
 </body>
