--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -40,5 +40,22 @@
       </section>
   </main>
 
+  <footer>
+    <div class="footer-container">
+        <!-- Social Links Column -->
+        <div class="footer-column footer-social">
+            <h3>Follow Us</h3>
+            <a href="https://github.com/" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+          <a href="https://instagram.com/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+          <a href="https://facebook.com/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://twitter.com/" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+        </div>
+
+    </div>
+
+   
+
+</footer>
+
   </body>
   </html>
