--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -51,9 +51,19 @@
           <a href="https://twitter.com/" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
         </div>
 
+        <!-- Sign-up Form Column -->
+        <div class="footer-column footer-signup">
+          <h3>Subscribe</h3>
+          <p>Subscribe to our newsletter</p>
+          <form action="#" method="post">
+              <input type="email" placeholder="Enter your email" required>
+              <button type="submit">Sign Up</button>
+          </form>
+      </div>
+
     </div>
 
-   
+
 
 </footer>
 
