--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -112,6 +112,14 @@
     <footer>
       <div class="container">
         <div class="items">
+          <div class="items-column">
+          </div>
+          <div class="items-column">
+          </div>
+          <div class="items-column">
+          </div>
+          <form class="items-column">
+          </form>
         </div>
       </div>
     </footer>
