added quick links section to footer for easy navigation

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -59,7 +59,16 @@
               <input type="email" placeholder="Enter your email" required>
               <button type="submit">Sign Up</button>
           </form>
-      </div>
+        </div>
+
+        <!-- Footer Links Column -->
+          <div class="footer-column footer-links">
+            <h3>Quick Links</h3>
+            <a href="#about">About</a>
+            <a href="#services">Services</a>
+            <a href="#contact">Contact</a>
+            <a href="#privacy">Privacy Policy</a>
+        </div>
 
     </div>
 
