--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -70,6 +70,7 @@
             <a href="#privacy">Privacy Policy</a>
         </div>
 
+        <p>&copy; 2024 YourWebsiteName. All rights reserved.</p>
     </div>
 
 
