--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -113,6 +113,28 @@
       <div class="container">
         <div class="items">
           <div class="items-column">
+            <h2>Social Links</h2>
+            <ul class="social-links">
+              <li>
+                <img src="images/github.png" />
+                <span><a href="https://github.com/sajadsoorni">Github</a></span>
+              </li>
+              <li>
+                <img src="images/linkedin.png" />
+                <span
+                  ><a
+                    href="https://www.linkedin.com/in/sajad-soornisofla-88674a25a/"
+                    >LinedIn</a
+                  ></span
+                >
+              </li>
+              <li>
+                <img src="images/social.png" />
+                <span
+                  ><a href="https://stackoverflow.co/">Stack Overflow</a></span
+                >
+              </li>
+            </ul>
           </div>
           <div class="items-column">
           </div>
