--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -129,7 +129,7 @@
                 >
               </li>
               <li>
-                <img src="images/Stackoverflow.png" />
+                <img src="images/stackoverflow.png" />
                 <span
                   ><a href="https://stackoverflow.co/">Stack Overflow</a></span
                 >
