--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
     <link rel="stylesheet" href="css/style.css" />   
+    <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+  />
 </head>
   <body>
     <div class="container">
@@ -137,6 +141,7 @@
             </ul>
           </div>
           <div class="items-column">
+            
           </div>
           <div class="items-column">
           </div>
