Add useful links with Material Symbols icons to footer section

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -141,7 +141,37 @@
             </ul>
           </div>
           <div class="items-column">
-            
+            <h2>Useful Links</h2>
+            <div class="footer-span">
+              <span class="material-symbols-outlined"> link </span>
+              <p>
+                <a
+                  href="https://git-scm.com/about/branching-and-merging"
+                  target="_blank"
+                >
+                  GitHub Pages documentation
+                </a>
+              </p>
+            </div>
+            <div class="footer-span">
+              <span class="material-symbols-outlined"> link </span>
+              <p>
+                <a href="https://docs.github.com/en/pages" target="_blank">
+                  About - Branching and Merging
+                </a>
+              </p>
+            </div>
+            <div class="footer-span">
+              <span class="material-symbols-outlined"> link </span>
+              <p>
+                <a
+                  href="https://dev.to/mochafreddo/how-to-manage-documentation-in-a-github-repository-a-guide-for-junior-developers-pgo"
+                  target="_blank"
+                >
+                  How to Manage Documentation in a GitHub Repository
+                </a>
+              </p>
+            </div>
           </div>
           <div class="items-column">
           </div>
