--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -14,6 +14,7 @@
     </header>
 
     <body>
+      <section>
       <article>
         <h2>What is Git?</h2>
         <p>By far, the most widely used modern version control system in the world today is Git. Git is a mature, actively maintained open source project originally developed in 2005 by Linus Torvalds, the famous creator of the Linux operating system kernel.
@@ -23,7 +24,9 @@
           </p>
 
       </article>
+    </section>
 
+    <section>
       <article>
         <h2>Why do developers need Git?</h2>
         <ul>
@@ -36,11 +39,15 @@
         </ul>
         </p>
       </article>
-      
+    </section>
+
+    <section>
       <article>
         <h2>What is a branch in Git?</h2>
         <p>Git branches are effectively a pointer to a snapshot of your changes. When you want to add a new feature or fix a bug—no matter how big or how small—you spawn a new branch to encapsulate your changes. This makes it harder for unstable code to get merged into the main code base, and it gives you the chance to clean up your future's history before merging it into the main branch.</p>
       </article>
+    </section>
+
 
 
 
@@ -49,4 +56,7 @@
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
 </main>
+<footer>
+
+</footer>
 </html>
