Update CSS file path for proper styling

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,10 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css" />  
   </head>
   <body>
+    <header>
+      <article>
+      <h1>What is Git?</h1>
+      </article>
+        <p>
+          Git is a distributed version control system that allows developers to
+          track changes in their code and collaborate on projects efficiently.
+          It enables multiple contributors to work on the same project
+          simultaneously while keeping a complete history of changes, making it
+          easy to revert to previous versions if needed.
+        </p>
+        <p>
+          Git supports branching and merging, allowing developers to experiment
+          with new features without affecting the main codebase. Its
+          decentralized nature means that every contributor has a full copy of
+          the repository, enhancing collaboration and minimizing the risk of
+          data loss.
+        </p>
+    </header>
+</body>
+
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
-</body>
+
 </html>
