--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -60,6 +60,7 @@
       <main>
         <section class="main-article">
           <article class="content">
+            <img src="images/Enhanced Collaboration.png" />
             <h2>Enhanced Collaboration</h2>
             <p>
               GitHub significantly improves collaboration among developers by
@@ -77,6 +78,7 @@
             <button><a href="#">Read more...</a></button>
           </article>
           <article class="content">
+            <img src="images/Version Control.png" />
             <h2>Robust Version Control</h2>
             <p>
               One of the primary benefits of GitHub is its powerful version
@@ -94,6 +96,7 @@
           </article>
 
           <article class="content">
+            <img src="images/Open Source Community.png" />
             <h2>Access to Open Source Community</h2>
             <p>
               GitHub is home to one of the largest open-source communities in
