--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -11,20 +11,21 @@
       <article>
       <h1>What is Git?</h1>
       </article>
-        <p>
+        <article><p>
           Git is a distributed version control system that allows developers to
           track changes in their code and collaborate on projects efficiently.
           It enables multiple contributors to work on the same project
           simultaneously while keeping a complete history of changes, making it
           easy to revert to previous versions if needed.
         </p>
+        <h1>Why do developers need Git?</h1>
         <p>
           Git supports branching and merging, allowing developers to experiment
           with new features without affecting the main codebase. Its
           decentralized nature means that every contributor has a full copy of
           the repository, enhancing collaboration and minimizing the risk of
           data loss.
-        </p>
+        </p></article>
     </header>
 </body>
 
