--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -13,14 +13,46 @@
         <p>What Is GitHub? And What Is It Used For?</p>
      </header>
 
-     <main>
+     <main class="intro">
       <h2>What is GitHub</h2>
       <p>GitHub is an online software development platform. It's used for storing, tracking, and collaborating on software projects.</p>
+      <br>
       <p>It makes it easy for developers to share code files and collaborate with fellow developers on open-source projects. GitHub also serves as a social networking site where developers can openly network, collaborate, and pitch their work.</p>
+      <br>
       <p>GitHub allows software developers and engineers to create remote, public-facing repositories on the cloud for free. A repository, or "repo" for short, is a coding project’s files and the revision history for each file.
         Once you’ve set up a repository on GitHub, you can copy it to your device, add and modify files locally, then "push" your changes back to the repository where your changes display for the public.</p>
-
      </main>
+
+     <section>
+      <h2>What is Git</h2>
+      <summary>
+        Git is a version control system used for tracking changes in computer files. It is generally used for source code management in software development.
+        <br><br>
+        <ul>
+          <li>Git is used to tracking changes in the source code</li>
+          <li>The distributed version control tool is used for source code management</li>
+          <li>It allows multiple developers to work together</li>
+          <li>It supports non-linear development through its thousands of parallel branches</li>
+        </ul>
+        <br><br>
+        <p>some feature of oF Git are Tracks history, Free and open source, Supports non-linear development, Creates backups, Scalable, Supports collaboration, Branching is easier, Distributed development</p>
+      </summary>
+    </section>
+
+     <article>
+      <h2>Why do developers need Git?</h2>
+      <summary>
+        
+      </summary>
+     </article>
+
+     <article>
+      <h2>What is a branch in Git?</h2>
+      <summary>
+        <p>Branch in Git is used to keep your changes until they are ready. You can do your work on a branch while the main branch (master) remains stable. After you are done with your work, you can merge it with the main office.</p>
+        <img src="./images/git_branch.jpeg">
+      </summary>
+     </article>
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
 </html
