an addition of footer

--- a/Cakes-Co/index.html
+++ b/Cakes-Co/index.html
@@ -33,10 +33,12 @@
       <section class="p-sec">
         <h1>Welcome</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae
-          voluptatem accusantium, necessitatibus cum accusamus, id cumque harum
-          voluptates ipsum nisi vero illo dolore! Doloribus, quae hic. Facilis
-          voluptate nobis eum.
+          At our bakery, we pride ourselves on using only the finest ingredients 
+          to create delicious cakes and pastries. Whether you're celebrating a 
+          birthday, an anniversary, or just treating yourself, we have a wide 
+          selection to choose from. From classic chocolate to unique flavors, 
+          each cake is crafted with love and attention to detail. Explore our 
+          offerings and discover the perfect cake for your special occasion!
         </p>
       </section>
       <section class="hero-sec">
@@ -49,10 +51,13 @@
         <img src="./img/img4.jpeg" alt="" />
       </section>
     </main>
-
-    <!-- Add your markup here -->
-    <!-- Add your markup here -->
-    <!-- Add your markup here -->
-    <!-- Add your markup here -->
+    <footer>
+      <p>&copy; 2024 cake delights. All Rights Reserved.</p>
+      <nav class="footer-nav">
+        <a href="#">Privacy Policy</a>
+        <a href="#">Terms of Service</a>
+        <a href="#">Contact Us</a>
+      </nav>  
+    </footer>
   </body>
 </html>
