--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -19,6 +19,7 @@
       <p>It makes it easy for developers to share code files and collaborate with fellow developers on open-source projects. GitHub also serves as a social networking site where developers can openly network, collaborate, and pitch their work.</p>
       <p>GitHub allows software developers and engineers to create remote, public-facing repositories on the cloud for free. A repository, or "repo" for short, is a coding project’s files and the revision history for each file.
         Once you’ve set up a repository on GitHub, you can copy it to your device, add and modify files locally, then "push" your changes back to the repository where your changes display for the public.</p>
+        <img class="logo" src="./images/what-is-github.png" alt="logo">
      </main>
 
      <section class="section-1">
@@ -33,6 +34,8 @@
         </ul>
         <br>
         <p>some feature of oF Git are Tracks history, Free and open source, Supports non-linear development, Creates backups, Scalable, Supports collaboration, Branching is easier, Distributed development</p>
+        <p>Learn More about GitHub?...</p>
+        <a href="https://en.wikipedia.org/wiki/GitHub">Read article</a>
       </summary>
     </section>
 
@@ -59,6 +62,8 @@
             <li>git push — push commit to a remote branch</li>
             <li>git pull — pull changes from a remote branch to your local branch</li> 
           </ul>
+          <p>Learn More about GitHub?...</p>
+          <a href="https://en.wikipedia.org/wiki/GitHub">Read article</a>
           
         </summary>
       </section>
@@ -68,6 +73,8 @@
         <summary>
           <p>Branch in Git is used to keep your changes until they are ready. You can do your work on a branch while the main branch (master) remains stable. After you are done with your work, you can merge it with the main office.
           Branches allow you to work on different parts of a project without impacting the main branch.</p>
+          <p>Learn More about GitHub?...</p>
+          <a href="https://en.wikipedia.org/wiki/GitHub">Read article</a>
           <img class="img-branch" src="./images/git_branch.jpeg" alt="branch in git">
         </summary>
       </section>
