--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -10,30 +10,30 @@
     <!-- Add your HTML markup here -->
          <!-- Page Title and Description Section -->
          <header>
-          <h1>Page Title</h1>
-          <p>And Short Description</p>
+          <h1>Understanding Git: A Beginner's Guide</h1>
+          <p>A comprehensive guide to understanding Git, why developers need it, and how branches work.</p>
         </header>
     
       <!-- Main Article Section -->
       <main>
         <div class="articles">
             <!-- First Article -->
-            <article>
-                <h2>Article Title1</h2>
-                <p>Article Summary</p>
-                <a href="#">Read More</a>
+            <article>            
+                <h2>What is Git?</h2>
+                <p>Git is a distributed version control system that allows multiple people to collaborate on a project efficiently. It helps track changes in the code, supports branching and merging, and makes it easier to revert to earlier versions if necessary. With Git, developers can work independently and then merge their changes without disrupting the workflow of others.</p>
+                <a href="https://www.novelvista.com/blogs/devops/git-an-important-devops-tool" target="_blank">Read More</a>
             </article>
             <!-- Second Article -->
             <article>
-              <h2>Article Title2</h2>
-              <p>Article Summary</p>
-              <a href="#">Read More</a>
+              <h2>Why do developers need Git?</h2>
+              <p>Developers need Git to manage code efficiently in both small and large projects. Git enables collaboration, allowing teams to work on different features simultaneously without overwriting each other's work. It also provides tools for tracking changes, resolving conflicts, and maintaining a history of code changes, making the development process smoother and less error-prone.</p>
+              <a href="https://marklodato.github.io/visual-git-guide/index-en.html" target="_blank">Read More</a>
            </article>
            <!-- Third Article -->
            <article>
-            <h2>Article Title3</h2>
-            <p>Article Summary</p>
-            <a href="#">Read More</a>
+            <h2>What is a branch in Git?</h2>
+            <p>A branch in Git is a separate line of development, allowing developers to work on new features or bug fixes without affecting the main project. It creates an independent environment to test and implement changes. Once the changes are ready, branches can be merged back into the main codebase, helping to isolate and manage different tasks or versions of the project.</p>
+            <a href="https://www.getdbt.com/analytics-engineering/transformation/git-workflow" target="_blank">Read More</a>
           </article>
 
         </div>
@@ -41,7 +41,7 @@
     
       <!-- Footer Section -->
       <footer>
-          <p>Footer text, contact links, and other information about the site overall.</p>
+          <p>Powered by Git Essentials.</p>
       </footer>
 
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
